--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -47,7 +48,19 @@
             android:name="LoginActivity"
             android:label="@string/sign_in" >
         </activity>
-        <activity android:label="@string/edit" android:name="EditAlarmActivity"></activity>
+        <activity
+            android:name="EditAlarmActivity"
+            android:label="@string/edit" >
+        </activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/APP_ID" />
+
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
