--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,8 @@
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity android:name="FriendsListActivity" android:label="@string/friends"></activity>
+        <activity android:name="NewFriend" android:label="@string/add_friend"></activity>
     </application>
 
 </manifest>
